final styling before adding api data

--- a/index.html
+++ b/index.html
@@ -176,7 +176,6 @@
             <!-- TODO: All main -->
             <!-- Main content here -->
             <div id="map" class="p-0"></div>
-
             <div class="container">
               <div
                 class="
@@ -226,8 +225,8 @@
       referrerpolicy="no-referrer"
     ></script>
     <!-- JS -->
+    <script src="scripts/functions.js"></script>
     <script src="scripts/map.js"></script>
-    <script src="scripts/style.js"></script>
     <script src="scripts/script.js"></script>
   </body>
 </html>
