added map pop-up and functions for custom behaviour

--- a/index.html
+++ b/index.html
@@ -235,6 +235,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+    <!-- Apexcharts JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <!-- JS -->
     <script src="scripts/functions.js"></script>
     <script src="scripts/map.js"></script>
