--- a/index.html
+++ b/index.html
@@ -182,33 +182,46 @@
         </div>
         <div class="col d-flex flex-column h-sm-100">
           <main class="row overflow-auto">
-            <!-- TODO: All main -->
             <!-- Main content here -->
-            <div id="map" class="p-0"></div>
-            <div class="container">
-              <div
-                class="
-                  row
-                  height
-                  d-flex
-                  justify-content-center
-                  align-items-center
-                "
-              >
+            <!-- Map Group -->
+            <div class="p-0">
+              <div id="map" class="main-display-element"></div>
+              <!-- Search -->
+              <div class="container">
                 <div
-                  id="floating-search"
-                  class="d-none d-sm-block col-11 col-lg-5 col-xl-4"
+                  class="
+                    row
+                    height
+                    d-flex
+                    justify-content-center
+                    align-items-center
+                  "
                 >
-                  <div class="search">
-                    <input
-                      type="text"
-                      class="form-control"
-                      placeholder="Type to start search"
-                    />
-                    <button class="btn btn-primary">Search</button>
+                  <div
+                    id="floating-search"
+                    class="d-none d-sm-block col-11 col-lg-5 col-xl-4"
+                  >
+                    <div class="search">
+                      <input
+                        type="text"
+                        class="form-control"
+                        placeholder="Type to start search"
+                      />
+                      <button class="btn btn-primary">Search</button>
+                    </div>
+                    <div
+                      id="search-results"
+                      class="col ps-1 pe-5 overflow-auto bg-light"
+                    >
+                      <!-- Search results here -->
+                    </div>
                   </div>
                 </div>
               </div>
+            </div>
+            <!-- TODO: charts page -->
+            <div id="graph" class="d-none p-0 main-display-element bg-warning">
+              <!-- TODO: div for new page for single page view toggle -->
             </div>
           </main>
         </div>
