slight modification of css file, no changes to reflect product

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
   <body>
     <div class="container-fluid overflow-hidden">
       <div class="row vh-100 overflow-auto">
+        <!-- Sidebar -->
         <div
           class="
             col-12 col-sm-3 col-xl-2
