added drsft version of search

--- a/index.html
+++ b/index.html
@@ -204,11 +204,14 @@
                   >
                     <div class="search">
                       <input
+                        id="search-query"
                         type="text"
                         class="form-control"
                         placeholder="Type to start search"
                       />
-                      <button class="btn btn-primary">Search</button>
+                      <button id="search-btn" class="btn btn-primary">
+                        Search
+                      </button>
                     </div>
                     <div
                       id="search-results"
