search result display timeout added

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                     </div>
                     <div
                       id="search-results"
-                      class="col ps-1 pe-5 overflow-auto bg-light"
+                      class="col ps-1 pe-5 overflow-auto bg-light shadow"
                     >
                       <!-- Search results here -->
                     </div>
