--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                 </div>
               </div>
             </section>
-            <!-- covid-19 info -->
+            <!-- COVID-19 info -->
             <section id="info" class="d-none p-0 main-display-element">
               <nav
                 class="
@@ -265,8 +265,9 @@
                   </li>
                 </ul>
               </nav>
-              <div class="mt-2 mt-md-0" data-bs-offset="0">
-                <div class="p-3 p-md-5" id="virus-info">
+              <div class="mt-2 mt-md-0">
+                <!-- COVID-19 -->
+                <div class="p-3 p-md-4" id="virus-info">
                   <div class="container">
                     <div class="row align-items-center justify-content-between">
                       <div class="col-md">
@@ -314,10 +315,11 @@
                     </div>
                   </div>
                 </div>
+                <!-- Symptoms and Treatment -->
                 <div class="p-3 p-md-5 bg-dark" id="symptom-treatment">
                   <div class="container">
                     <div class="row align-items-center justify-content-between">
-                      <div class="col-md">
+                      <div class="col-md order-2 order-md-1">
                         <h2 class="text-light">Symptoms and Treatment</h2>
                         <p class="lead text-light">
                           What are the symptoms of COVID-19?
@@ -349,8 +351,7 @@
                           ><i class="fas fa-chevron-right"></i> Read More</a
                         >
                       </div>
-
-                      <div class="col-md">
+                      <div class="col-md order-1 order-md-2">
                         <img
                           src="images/symptoms.png"
                           class="img-fluid"
@@ -360,7 +361,7 @@
                     </div>
                   </div>
                 </div>
-
+                <!-- Latest Information -->
                 <div class="p-3 p-md-5" id="latest-info">
                   <div class="container">
                     <div class="row align-items-center justify-content-between">
@@ -385,7 +386,6 @@
                           to refer to information on the World Health
                           Organization website at www.who.int.
                         </p>
-
                         <p class="text-muted">
                           <small
                             >*Extracted from moh.gov.sg on Sept 16 2021</small
