--- a/index.html
+++ b/index.html
@@ -251,15 +251,15 @@
               >
                 <ul class="nav">
                   <li class="nav-item border-end px-md-5">
-                    <a class="nav-link fw-light" href="#virus-info">COVID-19</a>
+                    <a class="nav-link fw-light" href="#virus-info-wrapper">COVID-19</a>
                   </li>
                   <li class="nav-item border-end px-md-5">
-                    <a class="nav-link fw-light" href="#symptom-treatment"
+                    <a class="nav-link fw-light" href="#symptom-treatment-wrapper"
                       >Symptoms</a
                     >
                   </li>
                   <li class="nav-item px-md-5">
-                    <a class="nav-link fw-light" href="#latest-info"
+                    <a class="nav-link fw-light" href="#latest-info-wrapper"
                       >Latest Info</a
                     >
                   </li>
@@ -267,7 +267,7 @@
               </nav>
               <div class="mt-2 mt-md-0">
                 <!-- COVID-19 -->
-                <div class="p-3 p-md-4" id="virus-info">
+                <div class="p-3 p-md-4" id="virus-info-wrapper">
                   <div class="container">
                     <div class="row align-items-center justify-content-between">
                       <div class="col-md">
@@ -316,7 +316,7 @@
                   </div>
                 </div>
                 <!-- Symptoms and Treatment -->
-                <div class="p-3 p-md-5 bg-dark" id="symptom-treatment">
+                <div class="p-3 p-md-5 bg-dark" id="symptom-treatment-wrapper">
                   <div class="container">
                     <div class="row align-items-center justify-content-between">
                       <div class="col-md order-2 order-md-1">
@@ -362,7 +362,7 @@
                   </div>
                 </div>
                 <!-- Latest Information -->
-                <div class="p-3 p-md-5" id="latest-info">
+                <div class="p-3 p-md-5" id="latest-info-wrapper">
                   <div class="container">
                     <div class="row align-items-center justify-content-between">
                       <div class="col-md">
@@ -394,7 +394,7 @@
                         <a
                           href="https://www.moh.gov.sg/covid-19/general"
                           class="btn btn-dark mt-2"
-                          ><i class="text-light fas fa-chevron-right"></i> Read
+                          ><i class=graph-wrapper"text-light fas fa-chevron-right"></i> Read
                           More</a
                         >
                       </div>
@@ -414,10 +414,41 @@
             <!-- statistics -->
             <section
               id="statistics"
-              class="d-none p-0 main-display-element bg-success"
+              class="d-none p-0 main-display-element bg-light"
             >
               <!-- TODO: div for new page for single page view toggle -->
-              Statistics
+              <div class="container text-center">
+                <!-- Row 1 -->
+                <div class="row my-4 chartrow">
+                  <div class="col-md-4 shadow-sm rounded">
+                    <div id="chart1-row1">Chart 1</div>
+                  </div>
+                  <div class="col-md-4 shadow-sm rounded">
+                    <div id="chart2-row1">Chart 2</div>
+                  </div>
+                  <div class="col-md-4 shadow-sm rounded">
+                    <div id="chart3-row">Chart 3</div>
+                  </div>
+                </div>
+                <!-- Row 2 -->
+                <div class="row mt-5 mb-4 chartrow">
+                  <div class="col-md-6 shadow-sm rounded">
+                    <div id="chart1-row2">Chart 4</div>
+                  </div>
+                  <div class="col-md-6 shadow-sm rounded">
+                    <div id="chart2-row2">Chart 5</div>
+                  </div>
+                </div>
+                <!-- Row 3 -->
+                <div class="row mt-5 mb-4 chartrow">
+                  <div class="col-md-6 shadow-sm rounded">
+                    <div id="chart1-row3">Chart 6</div>
+                  </div>
+                  <div class="col-md-6 shadow-sm rounded">
+                    <div id="chart2-row3">Chart 7</div>
+                  </div>
+                </div>
+              </div>
             </section>
           </main>
         </div>
