--- a/index.html
+++ b/index.html
@@ -251,10 +251,14 @@
               >
                 <ul class="nav">
                   <li class="nav-item border-end px-md-5">
-                    <a class="nav-link fw-light" href="#virus-info-wrapper">COVID-19</a>
+                    <a class="nav-link fw-light" href="#virus-info-wrapper"
+                      >COVID-19</a
+                    >
                   </li>
                   <li class="nav-item border-end px-md-5">
-                    <a class="nav-link fw-light" href="#symptom-treatment-wrapper"
+                    <a
+                      class="nav-link fw-light"
+                      href="#symptom-treatment-wrapper"
                       >Symptoms</a
                     >
                   </li>
@@ -394,7 +398,7 @@
                         <a
                           href="https://www.moh.gov.sg/covid-19/general"
                           class="btn btn-dark mt-2"
-                          ><i class=graph-wrapper"text-light fas fa-chevron-right"></i> Read
+                          ><i class="text-light fas fa-chevron-right"></i> Read
                           More</a
                         >
                       </div>
