added js file to render chart in charts page with mock data

--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                     <div id="chart2-row1">Chart 2</div>
                   </div>
                   <div class="col-md-4 shadow-sm rounded">
-                    <div id="chart3-row">Chart 3</div>
+                    <div id="chart3-row1">Chart 3</div>
                   </div>
                 </div>
                 <!-- Row 2 -->
@@ -485,5 +485,6 @@
     <script src="scripts/functions.js"></script>
     <script src="scripts/map.js"></script>
     <script src="scripts/script.js"></script>
+    <script src="scripts/charts.js"></script>
   </body>
 </html>
