minor css adjustments

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
           <main class="row overflow-auto">
             <!-- Main content here -->
             <!-- Map -->
-            <section id="map-container" class="p-0 main-display-element">
+            <section id="map-container" class="d-none p-0 main-display-element">
               <div id="map">
                 <div
                   class="
@@ -416,15 +416,12 @@
               vaccine
             </section>
             <!-- statistics -->
-            <section
-              id="statistics"
-              class="d-none p-0 main-display-element bg-light"
-            >
+            <section id="statistics" class="p-0 main-display-element bg-light">
               <!-- TODO: div for new page for single page view toggle -->
-              <div class="container text-center">
+              <div class="col text-center px-4 pt-2 px-md-5 py-md-3">
                 <!-- select state -->
-                <div class="row my-2 my-md-3 text-start">
-                  <div class="col-12 col-md-5">
+                <div class="row my-1 my-md-3 text-start">
+                  <div class="col-12 col-md-6 col-lg-4">
                     <label for="select-state" class="mb-1 mb-md-3"
                       >Choose state to filter:
                     </label>
