--- a/index.html
+++ b/index.html
@@ -439,7 +439,6 @@
                     </select>
                   </div>
                 </div>
-
                 <!-- Row 1 -->
                 <div id="chart-wrapper">
                   <div class="row my-3 my-md-4 chartrow">
@@ -456,7 +455,7 @@
                   <!-- Row 2 -->
                   <div class="row my-3 mt-md-5 mb-md-4 chartrow">
                     <div class="col-md-6 shadow-sm rounded">
-                      <div id="chart1-row2">Chart 4</div>
+                      <div id="chart1-row2"></div>
                     </div>
                     <div class="col-md-6 shadow-sm rounded">
                       <div id="chart2-row2">Chart 5</div>
