added chart 5 + major updates to sidebar mobile response classes

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <!-- Sidebar -->
         <div
           class="
-            col-12 col-sm-3 col-xl-2
+            col-12 col-md-3 col-xl-2
             px-0 px-sm-2
             bg-light
             d-flex
@@ -56,7 +56,7 @@
           <div
             class="
               d-flex
-              flex-sm-column flex-row flex-grow-1
+              flex-md-column flex-row flex-grow-1
               align-items-center align-items-sm-start
               px-3
               pt-2
@@ -84,17 +84,17 @@
                   border-promary
                 "
                 ><i class="fas fa-hospital-user"></i
-                ><span class="d-none d-sm-inline"> Vaccine GoWhere</span></span
+                ><span class="d-none d-md-inline"> Vaccine GoWhere</span></span
               >
             </a>
             <ul
               class="
                 nav
-                flex-sm-column
+                flex-md-column
                 flex-row
                 flex-nowrap
                 flex-shrink-1
-                flex-sm-grow-0
+                flex-md-grow-0
                 flex-grow-1
                 mb-sm-auto mb-0
                 justify-content-center
@@ -107,51 +107,51 @@
                 <a
                   href="#"
                   onclick="togglePage('#map-container')"
-                  class="nav-link px-sm-0 px-2"
+                  class="nav-link px-sm-2"
                   ><i class="fas fa-home"></i
-                  ><span class="ms-1 d-none d-sm-inline"> Home</span>
+                  ><span class="ms-1 d-none d-md-inline"> Home</span>
                 </a>
               </li>
               <li>
                 <a
                   href="#"
                   onclick="togglePage('#info')"
-                  class="nav-link px-sm-0 px-2"
+                  class="nav-link px-sm-2"
                 >
                   <i class="fas fa-shield-virus"></i>
-                  <span class="ms-1 d-none d-sm-inline"> Covid-19 Info</span>
+                  <span class="ms-1 d-none d-md-inline"> Covid-19 Info</span>
                 </a>
               </li>
               <li>
                 <a
                   href="#"
                   onclick="togglePage('#vaccine')"
-                  class="nav-link px-sm-0 px-2"
+                  class="nav-link px-sm-2"
                 >
                   <i class="fas fa-syringe"></i
-                  ><span class="ms-1 d-none d-sm-inline"> Vaccine</span></a
+                  ><span class="ms-1 d-none d-md-inline"> Vaccine</span></a
                 >
               </li>
               <li>
                 <a
                   href="#"
                   onclick="togglePage('#statistics')"
-                  class="nav-link px-sm-0 px-2"
+                  class="nav-link px-sm-2"
                 >
                   <i class="far fa-chart-bar"></i
-                  ><span class="ms-1 d-none d-sm-inline"> Statistics</span></a
+                  ><span class="ms-1 d-none d-md-inline"> Statistics</span></a
                 >
               </li>
               <li class="dropdown">
                 <a
                   href="#"
-                  class="nav-link dropdown-toggle px-sm-0 px-1"
+                  class="nav-link dropdown-toggle px-sm-2"
                   id="dropdown"
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
                   <i class="fas fa-info-circle"></i
-                  ><span class="ms-1 d-none d-sm-inline">More Info</span>
+                  ><span class="ms-1 d-none d-md-inline">More Info</span>
                 </a>
                 <ul
                   class="dropdown-menu dropdown-menu-light text-small shadow"
@@ -184,13 +184,13 @@
               </li>
             </ul>
             <div class="py-sm-4 mt-sm-auto ms-auto ms-sm-0 flex-shrink-1">
-              <span class="d-none d-sm-inline mx-1"
+              <span class="d-none d-md-inline mx-1"
                 ><i class="far fa-user-circle"></i> Developer</span
               >
               <a
                 href="#"
                 id="show-hide-search"
-                class="d-inline d-sm-none mx-1 text-light"
+                class="d-inline d-md-none mx-1 text-light"
                 ><i class="fas fa-search"></i
               ></a>
             </div>
@@ -458,7 +458,7 @@
                       <div id="chart1-row2"></div>
                     </div>
                     <div class="col-md-6 shadow-sm rounded">
-                      <div id="chart2-row2">Chart 5</div>
+                      <div id="chart2-row2"></div>
                     </div>
                   </div>
                   <!-- Row 3 -->
