--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
           <main class="row overflow-auto">
             <!-- Main content here -->
             <!-- Map -->
-            <section id="map-container" class="d-none p-0 main-display-element">
+            <section id="map-container" class="p-0 main-display-element">
               <div id="map">
                 <div
                   class="
@@ -416,7 +416,10 @@
               vaccine
             </section>
             <!-- statistics -->
-            <section id="statistics" class="p-0 main-display-element bg-light">
+            <section
+              id="statistics"
+              class="d-none p-0 main-display-element bg-light"
+            >
               <!-- TODO: div for new page for single page view toggle -->
               <div class="col text-center px-4 pt-2 px-md-5 py-md-3">
                 <!-- select state -->
