change on selection change update from re-render to updateOptions

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
           <main class="row overflow-auto">
             <!-- Main content here -->
             <!-- Map -->
-            <section id="map-container" class="p-0 main-display-element">
+            <section id="map-container" class="d-none p-0 main-display-element">
               <div id="map">
                 <div
                   class="
@@ -238,10 +238,7 @@
               </div>
             </section>
             <!-- statistics -->
-            <section
-              id="statistics"
-              class="d-none p-0 main-display-element bg-light"
-            >
+            <section id="statistics" class="p-0 main-display-element bg-light">
               <div class="col text-center px-4 pt-2 px-md-5 py-md-3">
                 <!-- select state -->
                 <div class="row my-1 my-md-3 my-lg-4 py-lg-4 text-start">
