added modal for vaccination appointment

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
           <main class="row overflow-auto">
             <!-- Main content here -->
             <!-- Map -->
-            <section id="map-container" class="d-none p-0 main-display-element">
+            <section id="map-container" class="p-0 main-display-element">
               <div id="map">
                 <div
                   class="
@@ -457,14 +457,47 @@
               </div>
             </section>
             <!-- vaccine -->
-            <section
-              id="vaccine"
-              class="d-none p-0 main-display-element bg-primary"
-            >
+            <section id="vaccine" class="p-0 main-display-element bg-primary">
               <!-- TODO: div for new page for single page view toggle -->
               vaccine
             </section>
           </main>
+        </div>
+      </div>
+      <!-- Modal for booking vaccination -->
+      <!-- TODO: Add modal for vaccination appointment booking -->
+      <div
+        class="modal fade"
+        id="staticBackdrop"
+        data-bs-backdrop="static"
+        data-bs-keyboard="false"
+        tabindex="-1"
+        aria-labelledby="staticBackdropLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body">...</div>
+            <div class="modal-footer">
+              <button
+                type="button"
+                class="btn btn-secondary"
+                data-bs-dismiss="modal"
+              >
+                Close
+              </button>
+              <button type="button" class="btn btn-primary">Understood</button>
+            </div>
+          </div>
         </div>
       </div>
     </div>
