--- a/index.html
+++ b/index.html
@@ -238,7 +238,10 @@
               </div>
             </section>
             <!-- statistics -->
-            <section id="statistics" class="p-0 main-display-element bg-light">
+            <section
+              id="statistics"
+              class="d-none p-0 main-display-element bg-light"
+            >
               <div class="col text-center px-4 pt-2 px-md-5 py-md-3">
                 <!-- select state -->
                 <div class="row my-1 my-md-3 my-lg-4 py-lg-4 text-start">
@@ -457,10 +460,7 @@
               </div>
             </section>
             <!-- vaccine -->
-            <section
-              id="vaccine"
-              class="d-none p-0 main-display-element bg-success"
-            >
+            <section id="vaccine" class="p-0 main-display-element bg-success">
               <!-- TODO: div for new page for single page view toggle -->
               Vaccine
             </section>
